--- a/www/index.html
+++ b/www/index.html
@@ -37,7 +37,7 @@
 	
 	<div id="content">
 		<h1 style="margin-bottom:0;">Carey Metcalfe</h1>
-		<p style="margin:0;padding-bottom:110px;">B.Cmp.H.SSP SODE Undergraduate</p>
+		<p style="margin:0;padding-bottom:110px;">B.Cmp.H. Undergraduate</p>
 		<p>
 			<a href="http://blog.cmetcalfe.ca">Blog</a><br/>
 			<a href="http://github.com/pR0Ps">Github</a><br/>
